NetBSD Problem Report #51775

From www@NetBSD.org  Wed Jan  4 09:45:23 2017
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 46C567A285
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  4 Jan 2017 09:45:23 +0000 (UTC)
Message-Id: <20170104094522.699087A336@mollari.NetBSD.org>
Date: Wed,  4 Jan 2017 09:45:22 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/raidframe/rf_aselect.c:270]: (style) Variable 'numUnitDags' set but not used ?
X-Send-Pr-Version: www-1.0

>Number:         51775
>Category:       kern
>Synopsis:       src/sys/dev/raidframe/rf_aselect.c:270]: (style) Variable 'numUnitDags' set but not used ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jan 04 09:50:00 +0000 2017
>Closed-Date:    Wed Jan 04 16:12:11 +0000 2017
>Last-Modified:  Wed Jan 04 16:12:11 +0000 2017
>Originator:     David Binderman
>Release:        cvs-20161231
>Organization:
>Environment:
>Description:
src/sys/dev/raidframe/rf_aselect.c:270]: (style) Variable 'numUnitDags' is modified but its new value is never used.

$ fgrep numUnitDags src/sys/dev/raidframe/rf_aselect.c 
	int     stripeNum, numUnitDags = 0, stripeUnitNum, numBlockDags = 0;
					numUnitDags++;
$

Suggest either use the local variable or delete it.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51775 CVS commit: src/sys/dev/raidframe
Date: Wed, 4 Jan 2017 10:50:34 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Jan  4 15:50:34 UTC 2017

 Modified Files:
 	src/sys/dev/raidframe: rf_aselect.c

 Log Message:
 PR/51775: David Binderman: Remove unused variable.


 To generate a diff of this commit:
 cvs rdiff -u -r1.28 -r1.29 src/sys/dev/raidframe/rf_aselect.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 04 Jan 2017 16:12:11 +0000
State-Changed-Why:
Fixed by christos.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.