PR/51775: David Binderman: Remove unused variable.